fix: remove padding and gap and update storybook

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 
 .white, .black { 
-    all: unset;     
-    padding: 0.75rem;
+    all: unset;
     border-radius: 0.5rem;
-    gap: 0.5rem;
     font-family: 'Inter', sans-serif; 
     font-weight: 600;
     font-size: 1rem;
@@ -13,6 +11,7 @@
     justify-content: center;
     line-height: 100%;
     letter-spacing: 0;
+    cursor: pointer;
 }
 
 .white {
